--- a/IP/Program 2/index.html
+++ b/IP/Program 2/index.html
@@ -8,19 +8,34 @@
     <form id="registrationForm">
       <h2>Student Registration</h2>
       <div class="form-group">
+        <input type="text" id="regno" required />
+        <label for="regno">RegisterNo</label>
+      </div>
+      <div class="form-group">
         <input type="text" id="name" required />
         <label for="name">Name</label>
       </div>
+      <div class="form-group">Date of Birth: 
+        <input type="date" id="dob" required />
+      </div>
       <div class="form-group">
-        <input type="text" id="subject1" required />
+        <input type="text" id="course" required />
+        <label for="course">Course</label>
+      </div>
+      <div class="form-group">
+        <input type="text" id="sem" required />
+        <label for="sem">Semester</label>
+      </div>
+      <div class="form-group">
+        <input type="number" id="subject1" required />
         <label for="subject1">Subject 1</label>
       </div>
       <div class="form-group">
-        <input type="text" id="subject2" required />
+        <input type="number" id="subject2" required />
         <label for="subject2">Subject 2</label>
       </div>
       <div class="form-group">
-        <input type="text" id="subject3" required />
+        <input type="number" id="subject3" required />
         <label for="subject3">Subject 3</label>
       </div>
       <input type="submit" value="Submit" />
