--- a/IOT/Program 6 Interface LCD/Objects/Interface lcd keypad.build_log.htm
+++ b/IOT/Program 6 Interface LCD/Objects/Interface lcd keypad.build_log.htm
@@ -19,17 +19,19 @@ CPU DLL:         S8051.DLL V3.122.0.0
 Dialog DLL:      DCore51.DLL V2.81.7.0 
 <h2>Project:</h2>
 D:\MCA0004\IOT\Program 6 Interface LCD\Interface lcd keypad.uvproj
-Project File Date:  10/28/2023
+Project File Date:  11/04/2023
 
 <h2>Output:</h2>
 Rebuild target 'Target 1'
 assembling STARTUP.A51...
 compiling lcd interface.c...
 linking...
-Program Size: data=9.0 xdata=0 code=271
+*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
+    SEGMENT: ?PR?DELAY1?LCD_INTERFACE
+Program Size: data=9.0 xdata=0 code=230
 creating hex file from ".\Objects\Interface lcd keypad"...
-".\Objects\Interface lcd keypad" - 0 Error(s), 0 Warning(s).
-Build Time Elapsed:  00:00:00
+".\Objects\Interface lcd keypad" - 0 Error(s), 1 Warning(s).
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
